archivos iniciales + adiciones

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
 <!-- Wowowoyipiyouuu tu código acá -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Translab</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- Fontawesome -->
+	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<header class="inicio">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6 col-xs-offset-3 text-center caja-logo">
+					<img src="docs/imagen.png" class="img-responsive" alt="logo">
+					<h2>TRANS-LAB</h2>
+				</div>
+			</div>
+		</div>
+	</header>	
+	<section class="validacion-datos">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-8 col-xs-offset-2">
+					<div class="input-group">
+  						<span class="input-group-addon" id="addon-email"><i class="fa fa-user-o" aria-hidden="true"></i></span>
+  						<input type="text" class="form-control" placeholder="Correo electrónico" aria-describedby="basic-addon1">
+					</div>
+					<div class="input-group">
+						<span class="input-group-addon" id="addon-clave"><i class="fa fa-lock" aria-hidden="true"></i></span>
+  						<input type="text" class="form-control" placeholder="Contraseña" aria-describedby="basic-addon1">
+					</div>
+					<div class="boton-inicio">
+  						<button class="btn btn-default" type="submit">Button</button>
+  					</div>
+  					<div class="a-clave">
+  						<a href="#">¿Olvidaste tu contraseña?</a>
+  					</div>
+				</div>
+			</div>
+			<div class="row text-center registro">
+				<p>¿NO TIENES CUENTA? <a href="#">REGÍSTRATE</a></p>
+			</div>
+		</div>
+	</section>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Bootstrap Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
+</html>
