--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Fontawesome -->
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header class="inicio">
+	<!--INICIO HEADER CON LOGO-->
+	<section class="inicio">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6 col-xs-offset-3 text-center caja-logo">
+				<div class="col-xs-8 col-xs-offset-2 text-center caja-logo">
 					<img src="docs/imagen.png" class="img-responsive" alt="logo">
 					<h2>TRANS-LAB</h2>
 				</div>
 			</div>
 		</div>
-	</header>	
-	<section class="validacion-datos">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-8 col-xs-offset-2">
+				<div class="col-xs-12 caja-input">
 					<div class="input-group">
-  						<span class="input-group-addon" id="addon-email"><i class="fa fa-user-o" aria-hidden="true"></i></span>
-  						<input type="text" class="form-control" placeholder="Correo electrónico" aria-describedby="basic-addon1">
+  						<span class="input-group-addon addon-email" id="addon-email"><i class="fa fa-user-o" aria-hidden="true"></i></span>
+  						<input type="text" class="form-control" id="input-email" placeholder="Correo electrónico" aria-describedby="basic-addon1">
 					</div>
 					<div class="input-group">
 						<span class="input-group-addon" id="addon-clave"><i class="fa fa-lock" aria-hidden="true"></i></span>
   						<input type="text" class="form-control" placeholder="Contraseña" aria-describedby="basic-addon1">
 					</div>
 					<div class="boton-inicio">
-  						<button class="btn btn-default" type="submit">Button</button>
+  						<button class="btn btn-default" type="submit">INICIAR SESIÓN</button>
   					</div>
   					<div class="a-clave">
   						<a href="#">¿Olvidaste tu contraseña?</a>
