home.html + estilos

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="cuerpo-menu">
 	<!--COMIENZO DE NAVBAR-->
 	<nav class="navbar navbar-inverse navbar-default">
   		<div class="container-fluid">
@@ -23,20 +23,58 @@
         			<span class="icon-bar"></span>
         			<span class="icon-bar"></span>
       			</button>
-      			<a class="navbar-brand" href="#">TRANS-LAB</a>
+      			<a class="navbar-brand text-center" href="#">TRANS-LAB</a>
     		</div>
     		<!--HAMBURGUESA DESPLEGABLE-->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-        			<li><a href="#saldo.html">Ver saldo</a></li>
-            		<li><a href="#tarifa">Calcular tarifa</a></li>
-            		<li><a href="#perfil.html">Perfil</a></li>
-            		<li><a href="#faq.html">Preguntas frecuentes</a></li>
-            		<li><a href="#home.html">Home</a></li>
+        			<li><a href="#saldo.html"><i class="fa fa-usd" aria-hidden="true"></i> Ver saldo</a></li>
+            		<li><a href="#tarifa"><i class="fa fa-calculator" aria-hidden="true"></i> Calcular tarifa</a></li>
+            		<li><a href="#perfil.html"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
+            		<li><a href="#faq.html"><i class="fa fa-question" aria-hidden="true"></i>      Preguntas frecuentes</a></li>
+            		<li><a href="#home.html"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Home</a></li>
           		</ul>
 			</div>
+			<!--FIN HAMBURGUESA-->
 		</div>
-	</nav>	
+	</nav>
+	<!--FIN NAVBAR-->
+	<section class="menu-home">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 text-center seccion-menu">
+					<div class="row">
+						<div class="col-xs-12 text-center">
+							<div>
+  								<a href="saldo.html"><button type="button" class="btn btn-default">VER SALDO</button></a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 text-center">
+							<div>
+  								<a href="tarifa.html"><button type="button" class="btn btn-default">CALCULAR TARIFA</button></a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 text-center">
+							<div>
+  								<a href="perfil.html"><button type="button" class="btn btn-default">PERFIL</button></a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 text-center">
+							<div>
+  								<a href="faq.html"><button type="button" class="btn btn-default">PREGUNTAS FRECUENTES</button></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
