--- a/tarifa.html
+++ b/tarifa.html
@@ -27,11 +27,11 @@
     		<!--HAMBURGUESA DESPLEGABLE-->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-        			<li><a href="#saldo.html">Ver saldo</a></li>
-            		<li><a href="#tarifa">Calcular tarifa</a></li>
-            		<li><a href="#perfil.html">Perfil</a></li>
-            		<li><a href="#faq.html">Preguntas frecuentes</a></li>
-            		<li><a href="#home.html">Home</a></li>
+        			<li><a href="#saldo.html"><i class="fa fa-usd" aria-hidden="true"></i> Ver saldo</a></li>
+            		<li><a href="#tarifa"><i class="fa fa-calculator" aria-hidden="true"></i> Calcular tarifa</a></li>
+            		<li><a href="#perfil.html"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
+            		<li><a href="#faq.html"><i class="fa fa-question" aria-hidden="true"></i>      Preguntas frecuentes</a></li>
+            		<li><a href="#home.html"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i> Home</a></li>
           		</ul>
 			</div>
 		</div>
