faq.htm y estilos +jquery

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="cuerpo-faq">
 	<!--COMIENZO DE NAVBAR-->
 	<nav class="navbar navbar-inverse navbar-default">
   		<div class="container-fluid">
@@ -36,8 +36,45 @@
 			</div>
 		</div>
 	</nav>	
+	<section class="titulo-faq">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 text-center caja-titulo">
+					<h1>PREGUNTAS FRECUENTES</h1>
+				</div>
+			</div>
+		</div>
+	</section>	
+	<section class="preguntas">
+		<div class="container">
+ 			<div class="row">
+ 				<div class="col-xs-12 caja-preguntas">
+					<ul class="tabs">
+						<li><a class="tab-link current" data-tab="tab-1">Problemas y cuidados de tarjeta bip!</a></li>
+						<li><a class="tab-link" data-tab="tab-2">Tarjetas bancarias</a></li>
+						<li><a class="tab-link" data-tab="tab-3">Puntos y Centros bip!</a></li>
+						<li><a class="tab-link" data-tab="tab-4">¿Cómo ingreso un reclamo relacionado con la carga de mi tarjeta bip!?</a></li>
+					</ul>
+					<div id="tab-1" class="tab-content current">
+						Los cuidados de tu tarjeta son simples. Sólo debes evitar exponerla al calor, doblarla o quebrarla. Te recomendamos tenerla en un tarjetero plástico para aumentar su vida útil.
+					</div>
+					<div id="tab-2" class="tab-content">
+						Las tarjetas bip! bancarias son tarjetas de débito que emiten los bancos a sus clientes. Estas tarjetas además de permitir funciones bancarias, son tarjetas bip!, por lo tanto pueden ser utilizadas en toda la red Transantiago.
+					</div>
+					<div id="tab-3" class="tab-content">
+						Son oficinas donde puedes comprar, cargar y consultar el saldo de tu bip!, además de activar cargas remotas. La mayoría de los Centro bip! son locales compartidos con servicios de atención de Servipag y ServiEstado.
+					</div>
+					<div id="tab-4" class="tab-content">
+						Llámanos al 600 730 00 73 o ingresa a nuestra sección bip! en línea. Una vez registrado tu reclamo daremos respuesta dentro de 5 días.
+					</div>
+				</div>
+			</div>
+		</div><!-- container -->
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="js/main.js"></script>
+	
 </body>
 </html>
