--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</div>
 					<div class="input-group">
 						<span class="input-group-addon" id="addon-clave"><i class="fa fa-lock" aria-hidden="true"></i></span>
-  						<input type="text" class="form-control" placeholder="Contraseña" aria-describedby="basic-addon1">
+  						<input type="text" class="form-control" id="input-contraseña" placeholder="Contraseña" aria-describedby="basic-addon1">
 					</div>
 					<div class="boton-inicio">
   						<button class="btn btn-default" type="submit">INICIAR SESIÓN</button>
@@ -50,5 +50,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
