saldo.html y estilos

--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="seccion-perfil">
 	<!--COMIENZO DE NAVBAR-->
 	<nav class="navbar navbar-inverse navbar-default">
   		<div class="container-fluid">
@@ -36,6 +36,16 @@
 			</div>
 		</div>
 	</nav>	
+	<header class="foto-perfil">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6 col-xs-offset-3 foto-perfil">
+					<img src="docs/1424804255.jpg" class="img-responsive perfil-batman" alt="">
+				</div>
+			</div>
+		</div>
+	</header>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
