perfil.html + estilos

--- a/perfil.html
+++ b/perfil.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 	</nav>	
-	<header class="foto-perfil">
+	<header class="foto-perfil-usuario">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-6 col-xs-offset-3 foto-perfil">
@@ -45,7 +45,29 @@
 			</div>
 		</div>
 	</header>
-	
+	<section class="perfil-usuario">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 text-center usuario">
+					<div class="row">
+						<div class="col-xs-8 col-xs-offset-2 text-center correo-usuario">
+							<p>batman@gotham-city.com</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12  text-center input-tarjeta">
+							<div class="numero-tarjeta">
+								<input class="effect-1" id="input-tarjeta" type="text" placeholder="Ingrese número de tarjeta">
+							</div>	
+							<div class="boton-tarjeta">
+								<button type="button" class="btn btn-default" id="boton-agregar-tarjeta">AGREGAR TARJETA</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
