--- a/tarifa.html
+++ b/tarifa.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Asap:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="cuerpo-tarifa">
 	<!--COMIENZO DE NAVBAR-->
 	<nav class="navbar navbar-inverse navbar-default">
   		<div class="container-fluid">
