tarifa.html avanzado + estilos

--- a/tarifa.html
+++ b/tarifa.html
@@ -36,6 +36,20 @@
 			</div>
 		</div>
 	</nav>	
+	<section class="tarifa-tarjeta">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 text-center ingreso-tarjeta">
+					<div class="numero-tarjeta">
+						<input class="effect-1" id="input-tarjeta" type="text" placeholder="Ingrese número de tarjeta">
+					</div>
+					<div>
+						<button type="button" class="btn btn-default" id="boton-ver-saldo">CALCULAR TARIFA</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Bootstrap Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
